--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -33,17 +33,32 @@ jobs:
         with:
           elixir-version: "1.13.3" # Define the elixir version [required]
           otp-version: "24.2.1" # Define the OTP version [required]
+
       - name: Restore dependencies cache
         uses: actions/cache@v3
         with:
           path: deps
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: ${{ runner.os }}-mix-
+
       - name: Check Formatting
         run: mix format --check-formatted
+
       - name: Run Credo
         run: mix credo --strict
+
+      - name: Check coverage
+        run: mix coveralls.json
+        env:
+          MIX_ENV: test
+
+      - name: Run codecov script
+        run: bash <(curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov)
+        env:
+          CODECOV_TOKEN: ${{ serects.CODECOV_TOKEN }}
+
       - name: Install dependencies
         run: mix deps.get
+
       - name: Run tests
         run: mix test
