--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -53,7 +53,7 @@ jobs:
           MIX_ENV: test
 
       - name: Run codecov script
-        run: bash <(curl -Os https://uploader.codecov.io/latest/linux/codecov && chmod +x codecov && ./codecov)
+        run: bash <(curl -s https://codecov.io/bash)
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
