--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     name: Build and test
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message , '[skip ci]')"
 
     services:
       db:
@@ -69,7 +70,7 @@ jobs:
   deploy:
     name: Deploy on gigalixir
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && "!contains(github.event.head_commit.message , '[skip ci]')"
 
     runs-on: ubuntu-latest
 
